experimental/ir/testdata/fields/default_proto3.proto.stderr.txt
error: custom default in "proto3"
  --> testdata/fields/default_proto3.proto:6:18
   |
 6 |     int32 x = 1 [default = 42];
   |                  ^^^^^^^^^^^^
  ::: testdata/fields/default_proto3.proto:1:10
   |
 1 | syntax = "proto3";
   |          -------- "proto3" specified here
   |
   = help: custom defaults cannot be defined in "proto3" only

encountered 1 error
